--- a/hims-frontend/package.json
+++ b/hims-frontend/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "crypto-js": "^4.1.1",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -31,6 +32,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
