--- a/hims-frontend/package.json
+++ b/hims-frontend/package.json
@@ -24,6 +24,7 @@
     "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
